# LoQI

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
app/: README.md  app.py  utils.py
data_processing/: README.md  process_geom.py  process_qm9.py  utils_data.py
megalodon_licence/: third_party.txt
scripts/: sample.py  sample_conformers.py  train.py
scripts/conf/drugs/: megalodon_diffusion.yaml
scripts/conf/loqi/: loqi.yaml  nextmol.yaml
scripts/conf/megalodon/drugs/: megalodon_fm_inference.yaml  megalodon_quick_diffusion.yaml
scripts/conf/megalodon/qm9/: megalodon_diffusion.yaml  megalodon_fm.yaml  (+1 more)
scripts/conf/qm9/: eqgat.yaml  semla.yaml
src/megalodon/data/: adaptive_dataloader.py  batch_preprocessor.py  batch_preprocessor_conf.py  data_utils.py  midi_dataloader.py  molecule_datamodule.py  molecule_dataset.py  random_rotations.py  statistics.py
src/megalodon/dynamics/: fn_model.py  jodo.py  mega_large.py  nextmol.py  utils.py
src/megalodon/interpolant/: builder.py  continuous_diffusion.py  continuous_euclidean_fm.py  discrete_diffusion.py  discrete_fm.py  interpolant.py  interpolant_scheduler.py  interpolant_utils.py  ot.py
src/megalodon/metrics/: conformer_evaluation_callback.py  geometry.py  molecule.py  molecule_evaluation_callback.py  molecule_metrics_2d.py  molecule_metrics_3d.py  molecule_metrics_aimnet2.py  molecule_novelty_similarity.py  molecule_stability_2d.py  preserved_stereo.py  utils.py
src/megalodon/models/: denoising_models.py  loss_fn.py  module.py  scheduler.py  self_conditioning.py  utils_train.py
(+12 files in other folders)
